--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
+tf_keras==2.18.0
 tqdm==4.67.0
 typing_extensions==4.12.2
 tzdata==2024.2
