--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,24 @@
-version: '3.9'
+version: '3.8'
 
 services:
- backend:
-    build: 
-      context: .
-      dockerfile: Dockerfile
+  backend:
+    build: .
     container_name: fyp-backend
-    restart: always
     volumes:
       - .:/app
+      - data:/app/data
     ports:
       - "8000:8000"
+    environment:
+      - PYTHONUNBUFFERED=1
+      - PYTHONDONTWRITEBYTECODE=1
+    command: ["bash", "-c", "python manage.py runserver 0.0.0.0:8000"]
+    networks:
+      - fyp-network
+
+volumes:
+  data:
+
+networks:
+  fyp-network:
+    driver: bridge
